--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,3 +78,24 @@
   .text-shadow {
     text-shadow: 2px 2px 4px rgb(0, 0, 0);
   }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
